<resources>

    <string name="app_name" translatable="false">MyAlpDroid</string>
    <string name="ecu_widget_name" translatable="false">ECU Info</string>
    <string name="temp_widget_name" translatable="false">Temp. Info</string>

    <string name="appwidget_text" translatable="false">MyAlpDroid</string>

    <string name="add_widget" translatable="false">Add widget</string>
    <string name="author" translatable="false">By MyAlpDroid</string>
    <string name="msg_permission_required" translatable="false">Storage Permission is required for core functionality, Please enable it to be able to use the widget.</string>
    <string name="open_settings" translatable="false">Open Settings</string>
    <string name="permission_dialog_title" translatable="false">Permission required</string>
    <string name="storage_permission" translatable="false">Storage Permission</string>
    <string name="let_s_do_it" translatable="false">Let\'s do it!</string>
    <string name="you_re_all_set" translatable="false">You\'re all set!</string>


    <!-- Enabled players settings -->
    <string name="traduction_title">Langue Français / English</string>
    <string name="traduction" translatable="false">Langue</string>
    <string name="media_title">Rechercher les players pour MyAlpDroid</string>
    <string name="media_sub_title">Affiche les lecteurs disponibles</string>

    <string name="list_new_players">Découverte automatique</string>
    <!-- Settings menu item -->
    <string name="title_activity_settings">Paramètres</string>


    <!-- Notification settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_notification_types">Type de notification</string>
    <string name="pref_title_notifications_now_playing">Now Playing</string>
    <string name="pref_title_notifications_alpdroid">Piste lue</string>
    <string name="pref_group_title_notification_settings">Paramètres de notification</string>
    <string name="pref_title_notification_vibrate">Vibration</string>
    <string name="pref_title_notification_sound">Son</string>
    <string name="pref_title_notification_light">Lumière</string>

    <!-- Strings related to notifications -->
    <string name="notification_channel_name_alpdroid">Alpdroids</string>
    <string name="notification_channel_name_error">Erreurs</string>
    <string name="notification_channel_name_now_playing">Now Playing</string>

    <!-- Strings related to login -->
    <string name="error">Erreur</string>
    <string name="error_unknown">Erreur inattendue</string>
    <string name="error_internet">Vous n\'êtes pas connectés à internet</string>
    <string name="splash_notification_access">Autoriser les notifications</string>
    <string name="splash_notification_access_text">Vous devez autoriser les notifications pour que MyAlprdoid puisse lire les médias.</string>

    <!-- Main window tabs -->
    <string name="tab_now_playing">Média</string>
    <string name="engine_display">Moteur</string>
    <string name="confort_display">Confort</string>
    <string name="computer_display">Défauts et paramètres</string>

    <!-- Strings related to Settings -->
    <string name="saved_session_key" translatable="false">sessionKey</string>
    <!-- Strings related to the now playing screen -->
    <string name="nothing_playing">Pas de lecture en cours</string>

    <!-- Strings related to the main screen -->
    <string name="settings">Paramètres</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <!-- Strings related to settings -->
    <string name="background_title">Choix du papier peint</string>
    <string name="background_summary">Papier peint</string>
    <string name="params1_title">Choisir le fond d\'écran</string>
    <string name="key_background" translatable="false">Choix</string>

    <string-array name="entries_background">
        <item>Dark Blue Hexagonal</item>
        <item>Light &amp; Star</item>
        <item>Red &amp; Blue Hexagone</item>
        <item>Blue Wave</item>
        <item>Blue Square</item>
        <item>Modern Chrono</item>
        <item>Right Corner Chrono</item>
        <item>Left Corner Chrono</item>
        <item>Blue Circle</item>
        <item>Dark</item>
        <item>Original</item>
    </string-array>

    <string-array name="values_background">
        <item>background_1,#070A1B</item>
        <item>background_2,#04121B</item>
        <item>background_3,#000000</item>
        <item>background_4,#182C46</item>
        <item>background_5,#242248</item>
        <item>background_6,#242248</item>
        <item>background_7,#242248</item>
        <item>background_8,#242248</item>
        <item>background_9,#242248</item>
        <item>background_10,#080514</item>
        <item>background,#242248</item>
    </string-array>

    <string name="metric_params">metric_params</string>
    <string name="key_metric">ismetric</string>
    <string name="metric_title">Système métrique</string>

    <string name="baudrate">baudrate_params</string>
    <string name="baudrate_summary">Vitesse Arudino</string>
    <string name="key_baudrate">baudrate</string>
    <string name="baudrate_title">Vitesse Arduino</string>
    <string name="key_subbaudrate" translatable="false">Baudrate</string>
    <string name="computer_state">Etat ECU</string>
    <string name="ptc_dtc">Voir DTC</string>
    <string name="car_parameters">Paramètres Alpine</string>
    <string name="mirror_autofolding">Rabat Rétroviseurs</string>
    <string name="start_stop">Start and Stop</string>
    <string name="car_park_signal">Désactivation du frein de parc automatique</string>
    <string name="overspeed_buzzer">Beep limiteur</string>
    <string name="start_stop_is_disable">Start Stop désactivé</string>
    <string name="car_sound_is_disable">Beep frein désactivé</string>
    <string name="reset_dtc">Raz défauts OBD</string>
    <string name="internal_temp">Température intérieure</string>
    <string name="params_car">Paramètres véhicule</string>
    <string name="external_temp">Température extérieure</string>
    <string name="prochaine_revision">Prochaine révision :</string>
    <string name="fan_speed">Ventilation</string>
    <string name="temp_fl">Temp AvG</string>
    <string name="temp_rl">Temp ArG</string>
    <string name="distance_km">Distance KM</string>
    <string name="conso_inst_l_s">l/100Km</string>
    <string name="r_serv_l">Réserv. (l)</string>
    <string name="oil">Huile</string>
    <string name="cool">Eau</string>
    <string name="gear_c">Temp. Boite</string>
    <string name="intake">Air</string>
    <string name="oil_pressure">Pression huile</string>
    <string name="title_arduino" translatable="false">Update Arduino</string>
    <string name="arduino_update" translatable="false">arduino_update</string>
    <string name="isdownload_UNO" translatable="false">isdownload_UNO</string>
    <string name="switch_coomputer">Etes-vous sûr de vouloir modifier ce paramètre ?</string>
    <string name="non">Non </string>
    <string name="oui">Oui </string>

    <string-array name="pref_baudrate">
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>345600</item>
        <item>460800</item>
    </string-array>

    <string-array name="key_subbaudrate">
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>345600</item>
        <item>460800</item>
    </string-array>
    <string name="update_arduino">Update Arduino</string>
    <string name="dur_e_d_part">Durée départ</string>
    <string name="moyenne_km_h">Moyenne (km/h)</string>
    <string name="roaddistance_km">Distance (km)</string>
    <string name="show_stored_diagnostic_trouble_codes">Voir les défauts (DTC)</string>
    <string name="ecm_defaults">ECM Defaults</string>
    <string name="this_dtc_code_is_not_documented">Ce code DTC n\'est pas documenté</string>
    <string name="this_is_bad_dtc">Mauvais code DTC</string>
    <string name="not_confirmed">Non confirmé</string>
    <string name="confirmed">Confirmé</string>
    <string name="and_light">et voyant allumé</string>
    <string name="defauts_ecu_entretien">Défauts ECU Entretien</string>
    <string name="setting_start_stop_mode">Modification du mode StartStop</string>
    <string name="start_stop_switch_value">Etat Start Stop</string>
    <string name="start_programming_mode">Mode étendu</string>
    <string name="start_stop_string"><![CDATA[Start & Stop]]></string>
    <string name="reset_ecu">Réinitialisation Ecu</string>
    <string name="ecu_in_default_mode">Mode par défaut</string>
    <string name="unable_to_set_start_stop_mode">Impossible de modifier Start Stop</string>
    <string name="suppress_auto_folding_mode">Suppression du mode Autofolding</string>
    <string name="mirror_switch_value">Valeur du mode Autofolding</string>
    <string name="mirror_folding">Rabat rétroviseurs</string>
    <string name="unable_to_suppress_autofolding">Impossible de changer le mode Autofolding</string>
    <string name="change_coldcountry">Changement mode ColdCountry</string>
    <string name="coldcountry_actual_value">Valeur du mode ColdCountry</string>
    <string name="mode_coldcountry">Mode ColdCountry</string>
    <string name="unable_to_set_coldcountry_mode">Impossible de mettre le mode ColdCountry</string>
    <string name="engine_alert_title">Alerte</string>
    <string name="engine_alert_text">Tour de refroidissement moteur</string>
    <string name="tyre_alert_text">Tour de refroidissement pneus</string>
    <string name="clutch">Embrayage</string>
    <string name="brakepress">Freins</string>
    <string name="throttle">Accélération</string>
    <string name="afficher_les_seuils_o_n">Afficher les seuils (O/N)</string>
    <string name="switch_brake_temp">Afficher la température freins</string>
    <string name="offset_tyre_pressure">Offset Tyre Pressure</string>
    <string name="offset_tyre_temp">Offset Tyre Temp</string>
    <string name="zone_de_fonctionnement">Zone de fonctionnement : 0.0 à 0.0</string>
    <string name="temperature">Température :</string>
    <string name="seuils_alertes_pneus">Seuils alertes pneus</string>
    <string name="pression">Pression :</string>

</resources>
