<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--below line is to create preference category-->
    <PreferenceCategory android:title="General">

    <!--in below line we are creating a list preference
        and we are adding default selected value in list for 3 rd index-->
    <!--dialog title is to set title for our dialog box
        entries is used to add list of data which we
        are adding from our strings file
        entry values is to add values to our entries.
        key is use to add key to our list preferences
        summary is use to add description to our option
        title is use to add title to our list preferences.-->
    <!--this list preference is for remind me option-->

    <ListPreference
       android:dialogTitle="@string/background_title"
        android:entries="@array/entries_background"
        android:entryValues="@array/values_background"
        android:key="@string/key_background"
        android:summary="@string/background_summary"
        android:title="@string/params1_title" />

    <!--on below line we are creating a switch preference
        default value is use to set switch on or off
        key is use to set key
        title is use to add title to our switch-->
    <!--this switch preference option is to remind for a bed time-->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_metric"
        android:title="@string/metric_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/traduction"
            android:title="@string/traduction_title" />

        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/baudrate"
            android:entries="@array/pref_baudrate"
            android:entryValues="@array/key_subbaudrate"
            android:key="@string/baudrate_summary"
            android:title="@string/baudrate_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/list_new_players"
            android:summary="@string/media_sub_title"
            android:title="@string/media_title" />

    </PreferenceCategory>

</PreferenceScreen>

